--- a/app/src/main/res/layout/sweet_alert_dialog_edit_email.xml
+++ b/app/src/main/res/layout/sweet_alert_dialog_edit_email.xml
@@ -6,6 +6,16 @@
     android:background="@color/cope_cod"
     android:theme="@style/SweetAlert.MaterialComponents">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/ibClose"
         android:layout_width="wrap_content"
@@ -14,8 +24,7 @@
         android:contentDescription="@string/close"
         android:src="@android:drawable/ic_menu_close_clear_cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
     <TextView
         android:id="@+id/textView"
