--- a/app/src/main/res/layout/sweet_alert_dialog_forgot_password.xml
+++ b/app/src/main/res/layout/sweet_alert_dialog_forgot_password.xml
@@ -160,7 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/hint_ver_code"
-                android:inputType="numberPassword"
+                android:inputType="numberDecimal"
                 android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
