--- a/app/src/main/res/layout/sweet_alert_dialog_two_factor_authentication.xml
+++ b/app/src/main/res/layout/sweet_alert_dialog_two_factor_authentication.xml
@@ -60,10 +60,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/hint_ver_code"
-            android:inputType="numberPassword"
+            android:inputType="numberDecimal"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvResendCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:text="@string/hint_resend_code"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tilVerificationCode" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
