--- a/app/src/main/res/layout/activity_detail_todo.xml
+++ b/app/src/main/res/layout/activity_detail_todo.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:id="@+id/ivImage"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="250dp"
                 android:layout_marginTop="10dp"
                 android:contentDescription="@string/hint_image"
                 android:src="@color/white_70"
@@ -60,6 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@string/hint_description"
+                android:maxLines="5"
                 android:textColor="@color/white_70"
                 app:layout_constraintTop_toBottomOf="@id/textView" />
 
