--- a/app/src/main/res/layout/item_todolist_shimmer.xml
+++ b/app/src/main/res/layout/item_todolist_shimmer.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/ivImage"
             android:layout_width="120dp"
-            android:layout_height="90dp"
+            android:layout_height="120dp"
             android:contentDescription="@string/hint_image"
             android:src="@color/shimmer"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +24,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="140dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/ivImage"
             app:layout_constraintTop_toTopOf="parent">
