Add Login with email or username

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,13 +50,13 @@
             android:text="@string/welcome"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toTopOf="@+id/tilEmail"
+            app:layout_constraintBottom_toTopOf="@+id/tilEmailOrUsername"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilEmail"
+            android:id="@+id/tilEmailOrUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -69,11 +69,11 @@
             app:startIconDrawable="@drawable/ic_round_contact_mail">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etEmail"
+                android:id="@+id/etEmailOrUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_edit_text_normal"
-                android:hint="@string/hint_email"
+                android:hint="@string/hint_emailOrUsername"
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />
 
@@ -89,7 +89,7 @@
             app:errorTextColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@id/tilEmailOrUsername"
             app:passwordToggleEnabled="true"
             app:startIconDrawable="@drawable/ic_round_password">
 
